win message correction

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Kai Bai Bo!</h1>
 
-    Five rounds of kai, bai, bo! The Korean version of rock, paper, scissors.
+    <p>Five rounds of kai, bai, bo! The Korean version of rock, paper, scissors.</p>
+    
+    kai = scissors<br />bai = rock<br />bo = paper
 
     <script src="main.js"></script>
 </body>
